--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/router": "4.4.3",
+    "angular2-jwt": "^0.2.3",
     "chart.js": "2.1.3",
     "core-js": "^2.5.1",
     "fullcalendar": "3.5.1",
     "intl": "1.2.5",
-    "jquery": "3.2.1",
-    "moment": "2.18.1",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "nanoscroller": "0.8.7",
     "primeng": "4.2.1",
-    "quill": "1.3.2",
+    "quill": "^1.3.7",
     "rxjs": "5.4.3",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.18"
