--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.4.3",
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
-    "@angular/core": "4.4.3",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
-    "@angular/router": "4.4.3",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "angular2-jwt": "^0.2.3",
     "chart.js": "2.1.3",
     "core-js": "^2.5.1",
@@ -30,15 +31,15 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "nanoscroller": "0.8.7",
-    "primeng": "4.2.1",
+    "primeng": "^5.0.0",
     "quill": "^1.3.7",
-    "rxjs": "5.4.3",
+    "rxjs": "^5.5.2",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@angular/cli": "1.4.3",
-    "@angular/compiler-cli": "4.4.3",
+    "@angular/compiler-cli": "^5.0.0",
     "@types/jasmine": "2.5.54",
     "@types/node": "6.0.88",
     "codelyzer": "3.1.2",
@@ -47,12 +48,12 @@
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.1.0",
     "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-coverage-istanbul-reporter": "1.3.0",
     "protractor": "5.1.2",
     "ts-node": "3.2.0",
     "tslint": "5.3.2",
-    "typescript": "2.3.4"
+    "typescript": "2.4.2"
   }
 }
